--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "ecommerce-api",
+  "name": "ecommer-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^7.6.3"
   }
 }
